--- a/api-reference/dynamic-rules/overview.mdx
+++ b/api-reference/dynamic-rules/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Dynamic Rules API"
+title: "Overview"
 description: "Fetch current OnlyFans signing parameters or generate signatures via /v2/dynamic-rules"
 ---
 
