docs: remove x-proxy-url header, document auto-proxy assignment
Proxies are now automatically assigned based on request geo for direct
session authentication. The x-proxy-url header has been fully removed.

--- a/getting-started/quick-reference.mdx
+++ b/getting-started/quick-reference.mdx
@@ -39,7 +39,7 @@ description: "API endpoints, headers, response codes, and key terms at a glance"
 | `x-of-cookie` | OnlyFans session cookie (must include `fp`, `auth_id`, `sess`) | Yes |
 | `x-of-user-agent` | User agent string | Yes |
 
-The `x-of-cookie` extracts `fp` for x-bc signing and `auth_id` for user identification. The `auth_uid_*` cookie is optional.
+The `x-of-cookie` extracts `fp` for x-bc signing and `auth_id` for user identification. The `auth_uid_*` cookie is optional. A geo-appropriate datacenter proxy is automatically assigned based on your request location.
 
 ---
 
