--- a/reference/access.mdx
+++ b/reference/access.mdx
@@ -39,7 +39,7 @@ x-of-cookie: ONLYFANS_SESSION_COOKIE
 x-of-user-agent: ONLYFANS_USER_AGENT
 ```
 
-Use when you handle authentication separately. You manage session expiry and rotation.
+Use when you handle authentication separately. You manage session expiry and rotation. A geo-appropriate datacenter proxy is automatically assigned based on your request location.
 
 ## Managed Endpoints
 
