--- a/api-reference/access/proxy.mdx
+++ b/api-reference/access/proxy.mdx
@@ -40,8 +40,7 @@ curl -X GET 'https://api.ofauth.com/v2/access/proxy/users/me' \
 curl -X GET 'https://api.ofauth.com/v2/access/proxy/users/me' \
   -H 'apikey: YOUR_API_KEY' \
   -H 'x-of-cookie: your_full_session_cookie_string' \
-  -H 'x-of-user-agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7)...' \
-  -H 'x-proxy-url: http://user:password@127.0.0.1:10000'
+  -H 'x-of-user-agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7)...'
 ```
 
 ```javascript JavaScript
@@ -203,7 +202,7 @@ The connection ID obtained from Link API authentication
 </Tab>
 
 <Tab title="Session Headers">
-Provide OnlyFans session data directly if you handle authentication separately. The `x-of-cookie` header must include the OnlyFans `fp`, `auth_id`, and `sess` cookies.
+Provide OnlyFans session data directly if you handle authentication separately. The `x-of-cookie` header must include the OnlyFans `fp`, `auth_id`, and `sess` cookies. A geo-appropriate datacenter proxy is automatically assigned based on your request location.
 
 <ParamField header="apikey" type="string" required>
 Your OFAuth API key
@@ -215,10 +214,6 @@ OnlyFans session cookie string. Must contain `fp`, `auth_id`, and `sess`.
 
 <ParamField header="x-of-user-agent" type="string" required>
 User agent string that matches the OnlyFans session
-</ParamField>
-
-<ParamField header="x-proxy-url" type="string" required>
-Proxy URL that matches the OnlyFans session in the format: `http://user:pass@host:port` or `socks5://user:pass@host:port`.
 </ParamField>
 </Tab>
 </Tabs>
